--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,7 @@
 PyInstaller
+pypdf
+pandas
+tkinter
 # Add any other dependencies required by your application here
 # For example, if you are using requests, you can add it like this:
 # requests
